# AiMe

./: AiMe.py  LICENSE  README.md  ai-me.desktop  optional  pyproject.toml  readme.md  requirements.txt  setup.py
