[tool.poetry]
name = "AiMe"
version = "0.1.0"
description = "AiMe is a world-class AI Assistant"
authors = ["L. Matthew Solomon III <solomonsremodeling9@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyttsx3 = "^2.90"
SpeechRecognition = "^3.8.1"
pydub = "^0.25.1"
wget = "^3.2"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.3"
gTTS = "^2.2.2"
youtube_dl = "^2021.6.6"
psutil = "^5.8.0"
sqlite3 = "^2.6.0"
inspect = "^1.0.2"
ast = "^3.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
